[package]
name = "downloads"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
doctest = false
name = "downloads"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# macro dependencies
derive_more = { workspace = true }

# async
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
futures-util = { workspace = true }

# utility dependencies
util = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }

# tracing/logging
log = { workspace = true }

# BitTorrent library
librqbit = { git = "https://github.com/JakeHillion/rqbit", rev = "c4e2ecf81d03bd8acd96a0803d06a70b34d5da19" }

# Embed torrent files
include_dir = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
