[package]
name = "exo_pyo3_bindings"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
name = "exo_pyo3_bindings"

# "cdylib" needed to produce shared library for Python to import
# "rlib" needed for stub-gen to run
crate-type = ["cdylib", "rlib"]

[[bin]]
path = "src/bin/stub_gen.rs"
name = "stub_gen"
doc = false

[lints]
workspace = true

[dependencies]
iroh_networking = { workspace = true }

# interop
pyo3 = { workspace = true, features = ["experimental-async"] }
pyo3-stub-gen = { workspace = true }
pyo3-async-runtimes = { workspace = true, features = ["attributes", "tokio-runtime", "testing"] }
pyo3-log = { workspace = true }

# macro dependencies
extend = { workspace = true }

# async runtime
tokio = { workspace = true, features = ["full", "tracing"] }

# utility dependencies
postcard = { workspace = true, features = ["use-std"] }
thiserror = { workspace = true }
rand = { workspace = true }
n0-future = { workspace = true }


# Tracing
#tracing = "0.1"
#tracing-subscriber = "0.3"
#console-subscriber = "0.1.5"
#tracing-log = "0.2.0"
log = { workspace = true }
env_logger = { workspace = true }


# Networking
iroh = { workspace = true }
iroh-gossip = { workspace = true }
