[package]
name = "exo_pyo3_bindings"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
doctest = false
path = "src/lib.rs"
name = "exo_pyo3_bindings"

# "cdylib" needed to produce shared library for Python to import
# "rlib" needed for stub-gen to run
crate-type = ["cdylib", "rlib"]

[[bin]]
path = "src/bin/stub_gen.rs"
name = "stub_gen"
doc = false

[lints]
workspace = true

[dependencies]
networking = { workspace = true }

# interop
pyo3 = { version = "0.27.2", features = [
    # "abi3-py313", # tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.13
    # "nightly", # enables better-supported GIL integration
    "experimental-async", # async support in #[pyfunction] & #[pymethods]
    #"experimental-inspect", # inspection of generated binary => easier to automate type-hint generation
    #"py-clone", # adding Clone-ing of `Py<T>` without GIL (may cause panics - remove if panics happen)
    # "multiple-pymethods", # allows multiple #[pymethods] sections per class

    # integrations with other libraries
    # "arc_lock", "bigdecimal", "either", "hashbrown", "indexmap", "num-bigint", "num-complex", "num-rational",
    # "ordered-float", "rust_decimal", "smallvec",
    # "anyhow", "chrono", "chrono-local", "chrono-tz", "eyre", "jiff-02", "lock_api", "parking-lot", "time",  "serde",
] }
pyo3-stub-gen = { version = "0.17.2" }
pyo3-async-runtimes = { version = "0.27.0", features = ["attributes", "tokio-runtime", "testing"] }
pyo3-log = "0.13.2"

# macro dependencies
extend = { workspace = true }
delegate = { workspace = true }

# async runtime
tokio = { workspace = true, features = ["full", "tracing"] }
futures-lite = { workspace = true }

# utility dependencies
util = { workspace = true }

# Tracing
log = { workspace = true }
env_logger = "0.11"

# Networking
libp2p = { workspace = true, features = ["full"] }
pin-project = "1.1.10"
