[package]
name = "exo_rs"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
doctest = false
path = "src/lib.rs"
name = "exo_rs"

# "cdylib" needed to produce shared library for Python to import
# "rlib" needed for stub-gen to run
crate-type = ["cdylib", "rlib"]

[[bin]]
path = "src/bin/stub_gen.rs"
name = "stub_gen"
doc = false

[lints]
workspace = true

[dependencies]
networking.workspace = true
extend.workspace = true

# interop
pyo3 = { workspace = true, features = ["experimental-async"] }
pyo3-stub-gen.workspace = true
pyo3-async-runtimes = { workspace = true, features = [
  "attributes",
  "tokio-runtime",
  "testing",
] }
pyo3-log.workspace = true

pidfile-rs = { workspace = true }

# async runtime
tokio = { workspace = true, features = ["full"] }
futures-lite.workspace = true
pin-project.workspace = true

# Tracing
log.workspace = true
env_logger.workspace = true

# Networking
zenoh.workspace = true
rand.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
