[package]
name = "exo_rs"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
doctest = false
path = "src/lib.rs"
name = "exo_rs"

# "cdylib" needed to produce shared library for Python to import
# "rlib" needed for stub-gen to run
crate-type = ["cdylib", "rlib"]

[[bin]]
path = "src/bin/stub_gen.rs"
name = "stub_gen"
doc = false

[lints]
workspace = true

[dependencies]
networking.workspace = true
util.workspace = true
extend.workspace = true
itertools = "0.14.0"

# interop
pyo3 = { workspace = true, features = ["serde", "experimental-async"] }
pyo3-stub-gen.workspace = true
pyo3-async-runtimes = { workspace = true, features = [
  "attributes",
  "tokio-runtime",
  "testing",
] }
pyo3-log.workspace = true

pidfile-rs = { workspace = true }

# config
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.21", features = ["macros"] }
postcard = { version = "1.1.3", features = ["alloc"] }
clap = { version = "4.6.1", features = [
  "derive",
  "env",
  "unicode",
  "string",
  "wrap_help",
] }
figment = { version = "0.10", features = ["env", "toml"] }
dirs = "6.0"
toml_edit = "0.25"


# async runtime
tokio = { workspace = true, features = ["full"] }
futures-lite.workspace = true
pin-project.workspace = true

# Tracing
log.workspace = true
env_logger.workspace = true

# Networking
zenoh.workspace = true
rand.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
