[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "exo_rs"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Evan Quiney", email = "evanev7@gmail.com" },
  { name = "Andrei Cravtov", email = "the.andrei.cravtov@gmail.com" },
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["exo_rs", "pytest>=8.4.0", "pytest-asyncio>=1.0.0"]

[tool.maturin]
module-name = "exo_rs"
features = ["pyo3/extension-module", "pyo3/experimental-async"]

[tool.pyo3-stub-gen]
generate-init-py = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
asyncio_mode = "auto"

[tool.uv]
cache-keys = [{ file = "src/**/*.rs" }]
