[package]
name = "util"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
doctest = false
name = "util"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
num_enum = { workspace = true }
rustix = { workspace = true, features = ["net"] }
zerocopy = { workspace = true }
