[package]
name = "util"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
doctest = false
name = "util"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
flopen = "0.1.3"
thiserror = "2.0"
libc = "0.2"
tempfile = "3"
nix.workspace = true
log.workspace = true
